# frex-Simulations-

./: .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  =0.53.0  =4.62.0  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  MANIFEST.in  MIT License  Makefile  README.md  config.json  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  pytest.ini  repo description  requirements.txt  setup.py  tatus  tox.ini
.github/workflows/: ci.yml  publish-docs.yml  python-ci.yml
OpenGL/GL/: __init__.py  shaders.py
OpenGL/GL/EXT/: framebuffer_object.py
architecture/: index.html
docs/: architecture.md  getting-started.md  index.md  services.md  usage.md
docs/modules/: ml.md  physics.md  quantum.md  rendering.md
frextech-ai-simulations/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
frextech-ai-simulations/.github/workflows/: cd.yml  ci.yml  model-training.yml
frextech-ai-simulations/configs/api/: server.yaml
frextech-ai-simulations/configs/environment/: development.yaml  production.yaml  staging.yaml
frextech-ai-simulations/configs/model/: base.yaml  inference.yaml  train.yaml
frextech-ai-simulations/data/: init.py
frextech-ai-simulations/data/datasets/: __init__.py  base_dataset.py  composite_dataset.py  data_loader.py  dataset_cache.py  dataset_factory.py  dataset_stats.py  image_dataset.py  multimodal_dataset.py  splitter.py  transforms.py  video_dataset.py
frextech-ai-simulations/data/embeddings/: init.py
frextech-ai-simulations/data/processed/: init.py
frextech-ai-simulations/data/raw/: init.py
frextech-ai-simulations/data/utils/: data_validator.py  file_io.py  init.py  logging_config.py
frextech-ai-simulations/docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  RESEARCH.md
frextech-ai-simulations/src/api/: __init__.py  server.py
frextech-ai-simulations/src/core/: __init__.py
frextech-ai-simulations/src/frontend/: package.json
frextech-ai-simulations/src/interactive/: __init__.py
frextech-ai-simulations/src/render/: __init__.py
frextech-ai-simulations/src/utils/: __init__.py  distributed.py  file_io.py  logging_config.py  metrics.py  visualization.py
frextech-ai-simulations/tests/integration/: test_api_endpoints.py  test_data_flow.py  test_full_pipeline.py
frextech-ai-simulations/tests/performance/: benchmark_inference.py  load_testing.py
frextech-ai-simulations/tests/unit/: test_editor.py  (+3 more)
frextech-ai-simulations/vscode/: extensions.json  launch.json  setting.json
frextech_medical/: __init__.py
frextech_medical/drug_discovery/: ai_screening.py  molecular_modeling.py  virtual_trials.py
frextech_medical/patient_simulation/: anatomy_engine.py  risk_modeling.py  surgical_training.py
frextech_medical/pharma_workflows/: bioinformatics_pipeline.py  compliance_logging.py  lab_automation.py
frextech_medical/tests/: Virtual_trials.py  test_drug_discovery.py  test_patient_simulation.py  test_pharma_workflows.py
getting-started/: index.html
glm/: __init__.py
modules/ml/: index.html
modules/physics/: index.html
modules/quantum/: index.html
modules/rendering/: index.html
search/: search_index.json
services/: index.html
sim_env/: Audio_Integration.py  Physics_simulation_module.py  Rendering_engine.py  __init__.py  __version__.py  config.py  constants.py  core_types.py  fluid_dynamics.py  gitignore  logging_config.py  main.py  ml_api.py  ml_pipeline.py  neural_Physics.py  physics_api.py  pyvenv.cfg  quantum_api.py  quantum_computing_Hybrid.py  rendering_api.py  security.py  web_Interface.py
sim_env/config/: FluidSettings.yaml  MLSettings.yaml  PhysicsSettings.yaml  QuantumSettings.yaml  RenderSettings.yaml  config.json
sim_env/core/: __init__.py
sim_env/runtime/: __init__.py  initializer.py  output_manager.py  simulation_loop.py
sim_env/utils/: __init__.py  gpu_acceleration.py  logger.py  metrics.py
tests/: __init__.py  conftest.py  test_example.py
usage/: index.html
(+106 files in other folders)
