[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frex-simulations"
version = "0.1.0"
description = "A modular video simulation engine with physics, ML, rendering, and quantum capabilities"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "nkurangafredrick146-code", email = "frextech@example.com"}
]
keywords = ["simulation", "physics", "rendering", "machine-learning", "quantum", "graphics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.21.0",
    "pygame>=2.1.0",
    "PyOpenGL>=3.1.5",
    "glm>=0.4.4",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "tensorflow>=2.8.0",
    "torch>=1.10.0",
    "matplotlib>=3.5.0",
    "pillow>=9.0.0",
    "requests>=2.27.0",
    "flask>=2.0.0",
    "pydantic>=1.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "black>=23.0",
    "flake8>=6.0",
    "isort>=5.11",
    "mypy>=1.0",
    "pylint>=2.15",
]
docs = [
    "mkdocs>=1.4",
    "mkdocs-material>=9.0",
    "mkdocstrings>=0.20",
    "mkdocs-gen-files>=0.5",
]
gpu = [
    "torch-cuda>=11.8",
    "tensorflow-gpu>=2.8.0",
]

[project.urls]
Homepage = "https://github.com/nkurangafredrick146-code/frex-simulations"
Repository = "https://github.com/nkurangafredrick146-code/frex-simulations.git"
"Bug Tracker" = "https://github.com/nkurangafredrick146-code/frex-simulations/issues"
Documentation = "https://nkurangafredrick146-code.github.io/frex-simulations/"

[tool.setuptools.packages.find]
where = ["."]
include = ["sim_env*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | venv
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [".venv", "venv", "build", "dist"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pygame.*",
    "OpenGL.*",
    "glm.*",
    "tensorflow.*",
    "torch.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gpu: marks tests that require GPU",
]

[tool.coverage.run]
source = ["sim_env"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
